[gd_scene load_steps=4 format=3 uid="uid://cthejhp2u8cn1"]

[ext_resource type="Script" path="res://ui/options.gd" id="1_wesnb"]
[ext_resource type="Theme" uid="uid://dgr682lt2tuy8" path="res://ui/ui_theme.tres" id="1_whu5i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7y2e"]
bg_color = Color(0.82, 0.2542, 0.2542, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_wesnb")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="OptionsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/MarginContainer"]
layout_mode = 2

[node name="EnableMusic" type="CheckBox" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "Music"
alignment = 2

[node name="EnableSound" type="CheckBox" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_whu5i")
button_pressed = true
text = "Sound Effects"
alignment = 2

[node name="HSeparator2" type="HSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_whu5i")
theme_override_constants/separation = 35

[node name="Return" type="Button" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_whu5i")
theme_override_font_sizes/font_size = 16
text = "Return to Game"

[node name="MainMenu" type="Button" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_whu5i")
theme_override_font_sizes/font_size = 16
text = "Main Menu
"

[node name="HSeparator" type="HSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_whu5i")
theme_override_constants/separation = 39

[node name="ResetHighScore" type="Button" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_whu5i")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_i7y2e")
theme_override_styles/hover = SubResource("StyleBoxFlat_i7y2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i7y2e")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7y2e")
text = "Reset High Score"

[connection signal="pressed" from="OptionsContainer/MarginContainer/VBoxContainer/Return" to="OptionsContainer" method="_on_return_pressed"]
[connection signal="pressed" from="OptionsContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
